Bugzilla Bug 317052: removed the obsolete file lib/base/whatnspr.c from CVS.  r=relyea. Modified Files: 	base.h error.c manifest.mn Removed Files: 	whatnspr.c